projects proshop repo linked

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Samuel Chau's Portfolio. Contact me through Linkedin, call, text, or email."
     />
     <link
       rel="stylesheet"
