--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,13 @@
       content="width=device-width, initial-scale=1, minimum-scale-1, user-scalable=no"
     />
     <meta name="theme-color" content="#000000" />
+    <meta property=”og:title” content="Samuel Chau's Portfolio Site" />
+    <meta property=”og:title” content="My personal portfolio website built with React and deployed on Vercel." />
     <meta
       name="description"
       content="Samuel Chau's Portfolio. Contact me through Linkedin, call, text, or email."
     />
+    <meta property=”og:image” content="pngs/portfolio-thumbnail.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
