--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="theme-color" content="#000000" />
     <meta property=”og:title” content="Samuel Chau's Portfolio Site" />
-    <meta property=”og:title” content="My personal portfolio website built with React and deployed on Vercel." />
+    <meta property=”og:title” content="My personal portfolio website built with React and deployed on Vercel. Feel free to connect through text, phone, or email." />
     <meta
       name="description"
       content="Samuel Chau's Portfolio. Contact me through Linkedin, call, text, or email."
