--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       name="description"
       content="Samuel Chau's Portfolio. Contact me through Linkedin, call, text, or email."
     />
-    <meta property=”og:image” content="pngs/portfolio-thumbnail.png" />
+    <meta property=”og:image” content="https://github.com/samqchau/portfolio/blob/master/public/pngs/portfolio-thumbnail.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
