--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@
       content="width=device-width, initial-scale=1, minimum-scale-1, user-scalable=no"
     />
     <meta name="theme-color" content="#000000" />
-    <meta property=”og:title” content="Samuel Chau's Portfolio Site" />
-    <meta property=”og:title” content="My personal portfolio website built with React and deployed on Vercel. Feel free to connect through text, phone, or email." />
+    <meta property="og:title" content="Samuel Chau's Portfolio Site" />
+    <meta property="og:description" content="My personal portfolio website built with React and deployed on Vercel. Feel free to connect through text, phone, or email." />
     <meta
       name="description"
       content="Samuel Chau's Portfolio. Contact me through Linkedin, call, text, or email."
     />
-    <meta property=”og:image” content="https://github.com/samqchau/portfolio/blob/master/public/pngs/portfolio-thumbnail.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/pngs/portfolio-thumbnail.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
