--- a/public/index.html
+++ b/public/index.html
@@ -26,16 +26,6 @@
     <link rel="manifest" href="%PUBLIC_URL%manifest.json" />
     <title>Sam Chau - A Fullstack Developer's Portfolio</title>
     <script type="text/javascript">
-      // Single Page Apps for GitHub Pages
-      // MIT License
-      // https://github.com/rafgraph/spa-github-pages
-      // This script checks to see if a redirect is present in the query string,
-      // converts it back into the correct url and adds it to the
-      // browser's history using window.history.replaceState(...),
-      // which won't cause the browser to attempt to load the new url.
-      // When the single page app is loaded further down in this file,
-      // the correct url will be waiting in the browser's history for
-      // the single page app to route accordingly.
       (function (l) {
         if (l.search[1] === '/') {
           var decoded = l.search
@@ -52,6 +42,15 @@
           );
         }
       })(window.location);
+    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SF2Z1QGRKN"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-SF2Z1QGRKN');
     </script>
   </head>
   <body>
