--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-ZLFPZBQ30L');
+      gtag('config', 'G-ZLFPZBQ30L',{ 'debug_mode':true });
     </script>
   </head>
   <body>
